Ajustando login e reconfigurando rotas